--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     networks:
       - sw6-simple-api
     environment:
+      - PHP_VERSION=8.0
       - XDEBUG_ENABLED=1
       - XDEBUG_MODE=debug,coverage
 
