--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   shop:
     container_name: sw6-simple-api
-    image: dockware/dev:latest
+    image: dockware/dev:6.4.20.2
     ports:
 #      - "22:22"     # ssh
       - "80:80"     # apache2
@@ -17,6 +17,8 @@ services:
       - PHP_VERSION=8.1
       - XDEBUG_ENABLED=1
       - XDEBUG_MODE=debug,coverage
+      # Für Remote-Setup benötigt: hier müsste IP des Laptops eingetragen werden
+      # - XDEBUG_REMOTE_HOST=
 
 networks:
   sw6-simple-api:
