SU-304 unnötiger Test entfernt.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ version: '3'
 services:
   shop:
     container_name: sw6-simple-api
-    image: dockware/dev:latest
-    ports:
+    #image: dockware/dev:6.4.20.2
+    image: dockware/dev:6.4.20.2-arm64
+ #   ports:
 #      - "22:22"     # ssh
-      - "80:80"     # apache2
-      - "3306:3306" # mysql
+ #     - "80:80"     # apache2
+  #    - "3306:3306" # mysql
     volumes:
       - ".:/var/www/html/custom/plugins/sw6"
       - .coverage:/opt/phpstorm-coverage:rw
